--- a/index.html
+++ b/index.html
@@ -191,29 +191,29 @@
                 <p class="hero-description">Product Designer</p>
                 <ul class="list list-hero-icon">
                   <li class="link-hero-icon">
-                    <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                    <a href="" class="link-icon ">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -236,28 +236,28 @@
                 <ul class="list list-hero-icon">
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -280,28 +280,28 @@
                 <ul class="list list-hero-icon">
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -324,28 +324,28 @@
                 <ul class="list list-hero-icon">
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon">
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link-hero-icon">
                     <a href="" class="link-icon" >
-                      <svg class="icon" width="44px" height="44px">
+                      <svg class="icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -363,42 +363,42 @@
         <ul class="list list-clients">
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo1"></use>
               </svg>
             </a>
           </li>
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo2"></use>
               </svg>
             </a>
           </li>
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo3"></use>
               </svg>
             </a>
           </li>
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo4"></use>
               </svg>
             </a>
           </li>
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo5"></use>
               </svg>
             </a>
           </li>
           <li class="li-clients">
             <a href="" class="link-icon-clients">
-              <svg class="icon-clients" width="160px" height="60px">
+              <svg class="icon-clients" width="106px" height="60px">
                 <use href="./images/symbol-defs.svg#icon-logo"></use>
               </svg>
             </a>
@@ -450,32 +450,32 @@
         </address>
       </div>
       <div > 
-        <b class="title-icon">приєднуйтесь</b>
+        <b class="title-icon">ПРИЄДНУЙТЕСЬ</b>
         <ul class="list list-footer-icon">
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-twiter"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a>
