--- a/portfolio.html
+++ b/portfolio.html
@@ -297,33 +297,33 @@
           </ul>
         </address>
       </div>
-      <div > 
-        <b class="title-icon">приєднуйтесь</b>
+      <div class="footer-box-icon" > 
+        <b class="title-icon">ПРИЄДНУЙТЕСЬ</b>
         <ul class="list list-footer-icon">
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-twiter"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="li-footer-icon">
             <a href="" class="link-footer-icon">
-              <svg class="icon-footer" width="44px" height="44px">
+              <svg class="icon-footer" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a>
